--- a/src/scss/components/about/_about-section.scss
+++ b/src/scss/components/about/_about-section.scss
@@ -1,10 +1,13 @@
 .about-section {
+	float: right;
 	width: $about-section-w;
-	margin: 0 auto;
-    padding: $gutter;
+	margin-right: $about-section-right-margin;
+	padding-top: $gutter;
+
 
     @include bp-s {
     	width: 100vw;
+    	margin-right: 0;
         padding: $gutter-bps;
     }
 }
