--- a/src/scss/components/project-overview/_project-overview-author.scss
+++ b/src/scss/components/project-overview/_project-overview-author.scss
@@ -15,3 +15,10 @@
         font-size: $project-overview-author-font-size-bps;
     }
 }
+
+
+.expanded-view {
+    .project-overview-author {
+        width: $project-overview-expanded-author-w;
+    }
+}
