--- a/src/scss/pages/_contribution.scss
+++ b/src/scss/pages/_contribution.scss
@@ -24,6 +24,6 @@
 		opacity: 1;
 		top: 50vh;
 		transform: translate(-50%, -50%);
-		left: calc(50vw + 5px);
+		left: $landing-left-panel;
 	}
 }
